feat: add full comment